# ObjectDetection

./: CMakeLists.txt  LICENSE  ObjectDetector.cpp  ObjectDetector.h  README.md
include/: ObjectDetector.h
src/: detectionmain.cpp
