cmake_minimum_required(VERSION 3.5)
project( ObjectDetection )
#set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} include)
set(SOURCES src/detectionmain.cpp src/ObjectDetector.cpp)
add_executable(ObjectDetection ${SOURCES})
target_link_libraries(ObjectDetection ${OpenCV_LIBS})
set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/bin})
#install(TARGETS ObjectDetection DESTINATION ${CMAKE_SOURCE_DIR}/bin)
